updates & patches & fixes for 1.21.11